# PM-Prompt-Patterns

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  ANALYTICS_MIGRATION.md  ANALYTICS_REORGANIZATION_COMPLETE.md  ATTRIBUTION.md  CHANGELOG.md  CICD_ENHANCEMENT_SUMMARY.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_IMPLEMENTATION_COMPLETE.md  CODE_REVIEW_REFACTORING_REPORT.md  CODE_REVIEW_REPORT.md  CONTENT_LICENSE.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW_REPORT.md  GIT_HISTORY_REWRITE_COMPLETE.md  GIT_HISTORY_REWRITE_GUIDE.md  LICENSE  LICENSE_FAQ.md  LICENSING_IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  MODEL_OPTIMIZATION_GUIDE.md  PHASE1_AUDIT.md  PROMPT_DESIGN_PRINCIPLES.md  PYTHON_PACKAGE_README.md  README.md  README_IMPROVEMENT_GUIDE.md  README_UPDATE_SUMMARY.md  REFACTOR_COMPLETE.md  REFACTOR_DESIGN.md  RESTRUCTURING_SUMMARY.md  SESSION_COMPLETE.md  UPDATING_MODELS.md  pyproject.toml  pytest.ini  requirements.txt  rewrite-history.sh
.github/: CONTRIBUTING.md  ROADMAP.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  auto-update-models.yml  check-model-staleness.yml  ci.yml  lint.yml  security.yml  tests.yml
ai_models/: __init__.py  capabilities.py  pricing.py  prompts.py  registry.py
ai_models/definitions/: schema.md
ai_models/definitions/anthropic/: claude-haiku-4-5.yaml  claude-opus-4-1.yaml  claude-sonnet-4-5.yaml
ai_models/definitions/google/: gemini-2-5-flash-lite.yaml  gemini-2-5-flash.yaml  gemini-2-5-pro.yaml
ai_models/definitions/openai/: gpt-4.1-mini.yaml  gpt-4.1.yaml  gpt-4o-mini.yaml  gpt-4o.yaml  gpt-5-mini.yaml  gpt-5.yaml  o3.yaml  o4-mini.yaml
config/: model_sources.yaml
docs/: ATTRIBUTION.md  DOCUMENTATION_STATUS.md  MODEL_UPDATE_SYSTEM.md  PROJECT_STRUCTURE.md  PROMPT_DESIGN_PRINCIPLES.md  PYTHON_PACKAGE_README.md  advanced-techniques.md  advanced_techniques.md  attribution.md  content_license.md  cost-optimization.md  cost_optimization.md  documentation_status.md  getting-started.md  getting_started.md  license_faq.md  model_update_system.md  project_structure.md  prompt-structure-guide.md  prompt_design_principles.md  provider-specific-prompts.md  python_package_readme.md  quality-evaluation.md  quality_evaluation.md
docs/workflows/: MODEL_UPDATE_WORKFLOW.md
examples/: basic_example.py
examples/epic-categorization/: README.md
examples/executive-reporting/: README.md
examples/signal-classification/: README.md
model-configs/anthropic/: claude-haiku-config.md  claude-opus-config.md  claude-sonnet-config.md
model-configs/google/: gemini-flash-config.md  gemini-pro-config.md
model-configs/openai/: gpt-3.5-config.md  gpt4-config.md  gpt4-turbo-config.md
models/: __init__.py  registry.py
pm_prompt_toolkit/: __init__.py
pm_prompt_toolkit/classifiers/: __init__.py  signal_classifier.py
pm_prompt_toolkit/config/: __init__.py  settings.py
pm_prompt_toolkit/optimizers/: __init__.py
pm_prompt_toolkit/providers/: __init__.py  base.py  bedrock.py  claude.py  factory.py  gemini.py  mock.py  openai.py  vertex.py
pm_prompt_toolkit/utils/: __init__.py
prompts/: python-80-percent-test-coverage.md
prompts/analytics/: README.md
prompts/analytics/investigation/: README.md
prompts/analytics/monitoring/: README.md
prompts/analytics/reporting/: README.md
prompts/analytics/signal-classification/: README.md  prompt.claude.md  prompt.gemini.md  prompt.md  prompt.openai.md
prompts/customer-research/: README.md
prompts/data-analysis/: README.md  signal-classification.md
prompts/developing-internal-tools/: README.md  claude-md-generator.md  code-review-refactoring.md  github-actions-python-cicd.md  llm-orchestration-system.md  pytest-cicd-optimization.md  python-80-percent-test-coverage.md
prompts/developing-internal-tools/claude-md-generator/: README.md  prompt.claude.md  prompt.gemini.md  prompt.md  prompt.openai.md
prompts/developing-internal-tools/code-review-refactoring/: README.md  prompt.claude.md  prompt.gemini.md  prompt.md  prompt.openai.md
prompts/developing-internal-tools/enterprise-readme-generator/: README.md  prompt.claude.md  prompt.gemini.md  prompt.md  prompt.openai.md
prompts/developing-internal-tools/github-actions-python-cicd/: README.md  prompt.claude.md  prompt.gemini.md  prompt.md  prompt.openai.md
prompts/developing-internal-tools/llm-orchestration-system/: README.md  prompt.claude.md  (+3 more)
prompts/product-strategy/: README.md  meta-prompt-designer.md
prompts/roadmap-planning/: README.md
prompts/stakeholder-communication/: README.md  executive-deck-review.md  remove-ai-writing-patterns.md
prompts/technical-documentation/: README.md  enterprise-readme-generator.md  llm-orchestration-system.md
reports/: final_synchronization_report.md  scan_results.md  update_results.md
scripts/: README.md  __init__.py  check_staleness.py  create_new_prompt.py  migrate_prompts.py  restructure_prompts.py  restructure_prompts_v2.py  run_tests.sh  verify_current_models.py
scripts/model_reference_updater/: __init__.py  change_reporter.py  main.py  patterns.py  reference_scanner.py  reference_updater.py
scripts/model_updater/: __init__.py  change_detector.py  main.py  pr_creator.py  validator.py
templates/: chain-of-thought.md  few-shot-examples.md  meta-prompting.md  new-prompt-template.md  structured-output.md
tests/: README.md  test_ai_models.py  test_bedrock_basic.py  test_capabilities_coverage.py  test_claude_provider_coverage.py  test_deprecated_models.py  test_factory_coverage.py  test_factory_routing.py  test_gemini_provider.py  test_mock_provider.py  test_model_endpoints.py  test_model_registry.py  test_openai_provider.py  test_pricing_consistency.py  test_pricing_coverage.py  test_prompts.py  test_providers_base.py  test_providers_stubs.py  test_registry_coverage.py  test_settings_config.py
tests/mocks/: future_models.yaml
tests/test_model_updater/: __init__.py  test_anthropic_fetcher.py  test_change_detection.py  test_fetchers.py  test_google_fetcher.py  test_main.py  test_openai_fetcher.py  test_validator.py
(+46 files in other folders)
